Adicionando o Create do cadastro

--- a/cadastro/templates/cadastro/lista_clientes.html
+++ b/cadastro/templates/cadastro/lista_clientes.html
@@ -5,3 +5,12 @@
         <li> {{ clientes.nome }} </li>
     {% endfor %}
 </ul>
+
+<form action="{% url 'cadastro_cliente_novo' %}" method="POST">
+    {% csrf_token %}
+
+    {{ form.as_p }}
+
+    <button type="submit">Cadastrar</button>
+</form>
+ 
