--- a/cadastro/templates/cadastro/lista_roupas.html
+++ b/cadastro/templates/cadastro/lista_roupas.html
@@ -5,3 +5,12 @@
     <li> {{ roupas.nome_roupa }} </li>
 {% endfor %}
 </ul>
+
+<form action="{% url 'cadastro_roupa_novo' %}" method="POST">
+    {% csrf_token %}
+
+    {{ form.as_p }}
+
+    <button type="submit">Cadastrar</button>
+</form>
+ 
