Adicionando o delete de Cadastro

--- a/cadastro/templates/cadastro/update_cliente.html
+++ b/cadastro/templates/cadastro/update_cliente.html
@@ -7,3 +7,5 @@
 
         <button type="submit"> Cadastrar </button>
 </form>
+
+<a href="{% url 'cadastro_cliente_delete' cliente.id %}">Deletar</a>
