--- a/cadastro/templates/cadastro/update_funcionario.html
+++ b/cadastro/templates/cadastro/update_funcionario.html
@@ -7,3 +7,5 @@
 
         <button type="submit"> Cadastrar </button>
 </form>
+
+<a href="{% url 'cadastro_funcionario_delete' funcionario.id %}">Deletar</a>
