--- a/cadastro/templates/cadastro/update_marcaroupa.html
+++ b/cadastro/templates/cadastro/update_marcaroupa.html
@@ -7,3 +7,5 @@
 
         <button type="submit"> Cadastrar </button>
 </form>
+
+<a href="{% url 'cadastro_marcaroupa_delete' marcaroupa.id %}">Deletar</a>
