--- a/cadastro/templates/cadastro/update_tiporoupa.html
+++ b/cadastro/templates/cadastro/update_tiporoupa.html
@@ -7,3 +7,5 @@
 
         <button type="submit"> Cadastrar </button>
 </form>
+
+<a href="{% url 'cadastro_tiporoupa_delete' tiporoupa.id %}">Deletar</a>
