--- a/cadastro/templates/cadastro/lista_funcionarios.html
+++ b/cadastro/templates/cadastro/lista_funcionarios.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block main %}
+
 <h2>Lista de Funcionario</h2>
 
 <ul> 
@@ -17,3 +21,4 @@
     <button type="submit">Cadastrar</button>
 </form>
  
+ {% endblock main %}
