--- a/cadastro/templates/cadastro/delete_confirm.html
+++ b/cadastro/templates/cadastro/delete_confirm.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block main %}
+
 <h2>Tem certeza que deseja deletar {{obj}} ?</h2>
 
 <form method='POST'>
@@ -6,3 +10,4 @@
 
 </form>
 
+{% endblock main %}
