--- a/cadastro/templates/cadastro/lista_clientes.html
+++ b/cadastro/templates/cadastro/lista_clientes.html
@@ -1,18 +1,34 @@
-<h2>Lista de Clientes</h2>
+{% extends 'base.html' %}
 
-<ul> 
-    {% for clientes in cliente %}
-        <li> 
-            <a href="{% url 'cadastro_cliente_update' clientes.id %}"> {{ clientes.nome }} </a>
-        </li>
-    {% endfor %}
-</ul>
 
-<form action="{% url 'cadastro_cliente_novo' %}" method="POST">
-    {% csrf_token %}
+{% block main %}
 
-    {{ form.as_p }}
+<div class="row">
+    <div class="col-12">
+        <h1>Lista de Clientes</h1>
+    </div>
+</div>
 
-    <button type="submit">Cadastrar</button>
-</form>
- 
+<div class="row">
+    <div class="col-sm-6">
+        <form action="{% url 'cadastro_cliente_novo' %}" method="POST">
+            {% csrf_token %}
+    
+            {{ form.as_p }}
+    
+            <button type="submit">Cadastrar</button>
+        </form>
+    </div>
+
+    <div class="col-6">
+        <ul> 
+            {% for clientes in cliente %}
+                <li> 
+                    <a href="{% url 'cadastro_cliente_update' clientes.id %}"> {{ clientes.nome }} </a>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
+
+{% endblock main %}
