--- a/cadastro/templates/cadastro/lista_roupas.html
+++ b/cadastro/templates/cadastro/lista_roupas.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block main %}
+
 <h2>Lista de Roupas</h2>
 
 <ul> 
@@ -15,4 +19,5 @@
 
     <button type="submit">Cadastrar</button>
 </form>
- 
+
+{% endblock main %}
