--- a/cadastro/templates/cadastro/lista_sessao.html
+++ b/cadastro/templates/cadastro/lista_sessao.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block main %}
+
 <h2>Lista de Sessões Roupas</h2>
 
 <ul> 
@@ -15,3 +19,5 @@
 
     <button type="submit">Cadastrar</button>
 </form>
+
+{% endclock main %}
