--- a/cadastro/templates/cadastro/update_cliente.html
+++ b/cadastro/templates/cadastro/update_cliente.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+
+{% block main %}
+
 <h2>Atualizando o Cliente: {{ cliente }}</h2>
 
 <form action="{% url 'cadastro_cliente_update' cliente.id %}" method="POST">
@@ -9,3 +14,5 @@
 </form>
 
 <a href="{% url 'cadastro_cliente_delete' cliente.id %}">Deletar</a>
+
+{% endblock main %}
