--- a/cadastro/templates/cadastro/update_marcaroupa.html
+++ b/cadastro/templates/cadastro/update_marcaroupa.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block main %}
+
 <h2>Atualizando a Marca da Roupa: {{ marcaroupa }}</h2>
 
 <form action="{% url 'cadastro_marcaroupa_update' marcaroupa.id %}" method="POST">
@@ -9,3 +13,5 @@
 </form>
 
 <a href="{% url 'cadastro_marcaroupa_delete' marcaroupa.id %}">Deletar</a>
+
+{% endblock main %}
