--- a/cadastro/templates/cadastro/update_roupa.html
+++ b/cadastro/templates/cadastro/update_roupa.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block main %}
+
 <h2>Atualizando a Roupa: {{ roupa }}</h2>
 
 <form action="{% url 'cadastro_roupa_update' roupa.id %}" method="POST">
@@ -9,3 +13,5 @@
 </form>
 
 <a href="{% url 'cadastro_roupa_delete' roupa.id %}">Deletar</a>
+
+{% endblock main %}
