--- a/cadastro/templates/cadastro/update_sessao.html
+++ b/cadastro/templates/cadastro/update_sessao.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block main %}
+
 <h2>Atualizando a Sesão: {{ sessao }}</h2>
 
 <form action="{% url 'cadastro_sessao_update' sessao.id %}" method="POST">
@@ -9,3 +13,5 @@
 </form>
 
 <a href="{% url 'cadastro_sessao_delete' sessao.id %}">Deletar</a>
+
+{% endblock main %}
