--- a/cadastro/templates/cadastro/update_tiporoupa.html
+++ b/cadastro/templates/cadastro/update_tiporoupa.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block main %}
+
 <h2>Atualizando o Tipo de Roupa: {{ tiporoupa }}</h2>
 
 <form action="{% url 'cadastro_tiporoupa_update' tiporoupa.id %}" method="POST">
@@ -9,3 +13,5 @@
 </form>
 
 <a href="{% url 'cadastro_tiporoupa_delete' tiporoupa.id %}">Deletar</a>
+
+{% endblock main %}
