--- a/cadastro/templates/cadastro/lista_funcionarios.html
+++ b/cadastro/templates/cadastro/lista_funcionarios.html
@@ -18,7 +18,7 @@
 
     {{ form.as_p }}
 
-    <button type="submit">Cadastrar</button>
+    <button type="submit" class="btn btn-success">Cadastrar</button>
 </form>
  
  {% endblock main %}
