--- a/cadastro/templates/cadastro/update_cliente.html
+++ b/cadastro/templates/cadastro/update_cliente.html
@@ -1,18 +1,24 @@
 {% extends 'base.html' %}
-
+{% load bootstrap %}
 
 {% block main %}
 
-<h2>Atualizando o Cliente: {{ cliente }}</h2>
 
-<form action="{% url 'cadastro_cliente_update' cliente.id %}" method="POST">
-        {% csrf_token %}
 
-        {{ form.as_p }}
+<div class="row">
+        <h2>Atualizando o Cliente: {{ cliente }}</h2>
+        <div class="col-6">
+                <form action="{% url 'cadastro_cliente_update' cliente.id %}" method="POST">
+                        {% csrf_token %}
 
-        <button type="submit"> Cadastrar </button>
-</form>
+                        {{ form|bootstrap }}
 
-<a href="{% url 'cadastro_cliente_delete' cliente.id %}">Deletar</a>
+                        <button type="submit" class="btn btn-success"> Atualizar </button>
+                        <a href="{% url 'cadastro_cliente_delete' cliente.id %}"
+                         class="btn btn-danger">Deletar</a>
+                </form>
+        </div>
+</div>
+
 
 {% endblock main %}
