--- a/cadastro/templates/cadastro/index.html
+++ b/cadastro/templates/cadastro/index.html
@@ -1,1 +1,12 @@
-teste2
+{% extends "base.html" %}
+
+
+{% block main %}
+    <div class="row">
+        <div class="col">
+            <h1>Seja Bem-vindo</h1>
+
+            <a href="/admin">Entrar</a>
+        </div>
+    </div>
+{% endblock main %}
