--- a/templates/base.html
+++ b/templates/base.html
@@ -5,14 +5,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
+    
     <title>Document</title>
 </head>
 <body>
+
 <div class="container-fluid">
+
+    {% block menu %}
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" href="{% url 'cadastro_home' %}">Home</a>
+            </li>
+    
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Roupas</a>
+                <div class="dropdown-menu">
+    
+                    <a class="dropdown-item" href="{% url 'cadastro_lista_roupas'%}">Roupas</a>
+                    <a class="dropdown-item" href="{% url 'cadastro_lista_marcaroupas'%}">Marca da Roupa</a>
+                    <a class="dropdown-item" href="{% url 'cadastro_lista_tiporoupas'%}">Tipo de Roupa</a>
+                    <a class="dropdown-item" href="{% url 'cadastro_lista_sessao'%}">Sessão da Roupa</a>
+    
+                    
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Separated link</a>
+                </div>
+            </li>
+    
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Cadastro</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="{% url 'cadastro_lista_clientes'%}">Clientes</a>
+                    <a class="dropdown-item" href="#">Aluguel</a>
+                    <a class="dropdown-item" href="{% url 'cadastro_lista_funcionarios'%}">Funcionarios</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Separated link</a>
+                </div>
+            </li>
+    
+            <li class="nav-item">
+                <a class="nav-link" href="#">Locação</a>
+            </li>
+    
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+    
+        </ul>
+    {% endblock %}
+
     {% block main %}
     {% endblock %}
+
 </div>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="{% static 'bootstrap/js/bootstrap.js'%}"></script>
+
 </body>
 </html>
