--- a/cadastro/templates/cadastro/lista_marcaroupas.html
+++ b/cadastro/templates/cadastro/lista_marcaroupas.html
@@ -1,23 +1,34 @@
 {% extends 'base.html' %}
+{% load bootstrap %}
 
 {% block main %}
 
-<h2>Lista de Marca de Roupas</h2>
+<div class="row">
+    <div class="col">
+        <h1>Lista de Marca de Roupas</h1>
+    </div>
+</div>
 
-<ul> 
-{% for marcaroupas in marcaroupa %}
-    <li>
-        <a href="{% url 'cadastro_marcaroupa_update' marcaroupas.id %}"> {{ marcaroupas.marca }} </a>
-    </li>
-{% endfor %}
-</ul>
+<div class="row">
+    <div class="col-sm-6">
+        <form action="{% url 'cadastro_marcaroupa_novo' %}" method="POST">
+        {% csrf_token %}
 
-<form action="{% url 'cadastro_marcaroupa_novo' %}" method="POST">
-    {% csrf_token %}
+        {{ form|bootstrap }}
 
-    {{ form.as_p }}
+        <button type="submit">Cadastrar</button>
+        </form>
+    </div>
 
-    <button type="submit">Cadastrar</button>
-</form>
+    <div class="col-sm-6">
+        <ul> 
+        {% for marcaroupas in marcaroupa %}
+            <li>
+                <a href="{% url 'cadastro_marcaroupa_update' marcaroupas.id %}"> {{ marcaroupas.marca }} </a>
+            </li>
+        {% endfor %}
+        </ul>
+    </div>
+</div>
 
 {% endblock main %}
