--- a/cadastro/templates/cadastro/lista_roupas.html
+++ b/cadastro/templates/cadastro/lista_roupas.html
@@ -1,23 +1,33 @@
 {% extends 'base.html' %}
+{% load bootstrap %}
 
 {% block main %}
 
-<h2>Lista de Roupas</h2>
+<div class="row">
+    <div class="col">
+        <h1>Lista de Roupas</h1>
+    </div>
+</div>
 
-<ul> 
-{% for roupas in roupa %}
-    <li> 
-        <a href="{% url 'cadastro_roupa_update' roupas.id %}"> {{ roupas.nome_roupa }} </a>
-    </li>
-{% endfor %}
-</ul>
+<div class="row">
+    <div class="col-sm-6">
+        <form action="{% url 'cadastro_roupa_novo' %}" method="POST">
+            {% csrf_token %}
 
-<form action="{% url 'cadastro_roupa_novo' %}" method="POST">
-    {% csrf_token %}
+            {{ form|bootstrap }}
 
-    {{ form.as_p }}
+            <button type="submit">Cadastrar</button>
+        </form>
+    </div>
 
-    <button type="submit">Cadastrar</button>
-</form>
-
+    <div class="col-sm-6">
+        <ul> 
+        {% for roupas in roupa %}
+            <li> 
+                <a href="{% url 'cadastro_roupa_update' roupas.id %}"> {{ roupas.nome_roupa }} </a>
+            </li>
+        {% endfor %}
+        </ul>
+    </div>
+</div>
 {% endblock main %}
