--- a/cadastro/templates/cadastro/lista_tiporoupas.html
+++ b/cadastro/templates/cadastro/lista_tiporoupas.html
@@ -1,23 +1,34 @@
 {% extends 'base.html' %}
+{% load bootstrap %}
 
 {% block main %}
 
-<h2>Lista de Marca de Roupas</h2>
+<div class="row">
+    <div class="col">
+        <h1>Lista de Tipo de Roupas</h1>
+    </div>
+</div>
 
-<ul> 
-{% for tiporoupas in tiporoupa %}
-    <li>
-        <a href="{% url 'cadastro_tiporoupa_update' tiporoupas.id %}"> {{ tiporoupas.tipo_roupa }} </a>
-    </li>
-{% endfor %}
-</ul>
+<div class="row">
+    <div class="col-sm-6">
+        <form action="{% url 'cadastro_tiporoupa_novo' %}" method="POST">
+            {% csrf_token %}
 
-<form action="{% url 'cadastro_tiporoupa_novo' %}" method="POST">
-    {% csrf_token %}
+            {{ form|bootstrap }}
 
-    {{ form.as_p }}
-
-    <button type="submit">Cadastrar</button>
-</form>
+            <button type="submit">Cadastrar</button>
+        </form>
+    </div>
+    <div class="col-sm-6">
+        <ul> 
+        {% for tiporoupas in tiporoupa %}
+            <li>
+                <a href="{% url 'cadastro_tiporoupa_update' tiporoupas.id %}">
+                {{ tiporoupas.tipo_roupa }} </a>
+            </li>
+        {% endfor %}
+        </ul>
+    </div>
+</div>
 
 {% endblock main %}
