--- a/cadastro/templates/cadastro/update_roupa.html
+++ b/cadastro/templates/cadastro/update_roupa.html
@@ -4,7 +4,11 @@
 {% block main %}
 
 <div class="row">
-        <h2>Atualizando a Roupa: {{ roupa }}</h2>
+        <div class="col-12">
+                <h2>Atualizando a Roupa: {{ roupa }}</h2>
+        </div>
+</div>
+<div class="row">
         <div class="col-6">
                 <form action="{% url 'cadastro_roupa_update' roupa.id %}" method="POST">
                         {% csrf_token %}
