--- a/cadastro/templates/cadastro/update_marcaroupa.html
+++ b/cadastro/templates/cadastro/update_marcaroupa.html
@@ -4,7 +4,12 @@
 {% block main %}
 
 <div class="row">
-        <h2>Atualizando a Marca da Roupa: {{ marcaroupa }}</h2>
+        <div class="col-12">
+                <h2>Atualizando a Marca da Roupa: {{ marcaroupa }}</h2>
+        </div>
+</div>
+
+<div class="row">
         <div class="col-6">
                 <form action="{% url 'cadastro_marcaroupa_update' marcaroupa.id %}" method="POST">
                         {% csrf_token %}
