--- a/cadastro/templates/cadastro/lista_funcionarios.html
+++ b/cadastro/templates/cadastro/lista_funcionarios.html
@@ -36,7 +36,18 @@
         <li class="nav-item">
             <a class="nav-link" href="#">Locação</a>
         </li>
-    
+        {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#" >Olá, {{ user }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+        {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+        {% endif %}
     </ul>
 {% endblock menu %}
 
@@ -44,7 +55,7 @@
 
 <div class="row">
     <div class="col">
-        <h1>Lista de Funcionarios</h1>
+        <h1>Cadastro de Funcionarios</h1>
     </div>
 </div>
 
@@ -59,14 +70,30 @@
         </form>  
     </div>         
 
-    <div class="col-sm-5">
-        <ul> 
-            {% for funcionarios in funcionario %}
-                <li>
-                    <a href="{% url 'cadastro_funcionario_update' funcionarios.id %}"> {{ funcionarios.nome }} </a>
-                </li>
-            {% endfor %} 
-        </ul>
-    </div> 
+    <div class="col-6">
+        <h1> Lista de Funcionarios </h1>
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">CPF</th>
+                    <th scope="col">Telefone</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for funcionarios in funcionario %}
+                <tr>
+                    <th scope="row">{{ funcionarios.id }}</th>
+                    <td>{{ funcionarios.nome }}</td>
+                    <td>{{ funcionarios.cpf }}</td>
+                    <td>{{ funcionarios.telefone }}</td>
+                    <td><a href="{% url 'cadastro_funcionario_update' funcionarios.id %}"> Editar </a></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </div>
 {% endblock main %}
