--- a/cadastro/templates/cadastro/lista_marcaroupas.html
+++ b/cadastro/templates/cadastro/lista_marcaroupas.html
@@ -36,7 +36,18 @@
         <li class="nav-item">
             <a class="nav-link" href="#">Locação</a>
         </li>
-    
+        {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#" >Olá, {{ user }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+        {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+        {% endif %}
     </ul>
 {% endblock menu %}
 
@@ -59,14 +70,26 @@
         </form>
     </div>
 
-    <div class="col-sm-6">
-        <ul> 
-        {% for marcaroupas in marcaroupa %}
-            <li>
-                <a href="{% url 'cadastro_marcaroupa_update' marcaroupas.id %}"> {{ marcaroupas.marca }} </a>
-            </li>
-        {% endfor %}
-        </ul>
+    <div class="col-6">
+        <h1> Lista de Marcas de Roupas </h1>
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Marca</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for marcaroupas in marcaroupa %}
+                <tr>
+                    <th scope="row">{{ marcaroupas.id }}</th>
+                    <td>{{ marcaroupas.marca }}</td>
+                    <td><a href="{% url 'cadastro_marcaroupa_update' marcaroupas.id %}"> Editar </a></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
 
