--- a/cadastro/templates/cadastro/lista_roupas.html
+++ b/cadastro/templates/cadastro/lista_roupas.html
@@ -36,7 +36,18 @@
         <li class="nav-item">
             <a class="nav-link" href="#">Locação</a>
         </li>
-    
+        {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#" >Olá, {{ user }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+        {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+        {% endif %}
     </ul>
 {% endblock menu %}
 
@@ -59,14 +70,30 @@
         </form>
     </div>
 
-    <div class="col-sm-6">
-        <ul> 
-        {% for roupas in roupa %}
-            <li> 
-                <a href="{% url 'cadastro_roupa_update' roupas.id %}"> {{ roupas.nome_roupa }} </a>
-            </li>
-        {% endfor %}
-        </ul>
+    <div class="col-6">
+        <h1> Lista de Roupas </h1>
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Nome da Roupa </th>
+                    <th scope="col">Marca</th>
+                    <th scope="col">Sessão</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for roupas in roupa %}
+                <tr>
+                    <th scope="row">{{ roupas.id }}</th>
+                    <td>{{ roupas.nome_roupa }}</td>
+                    <td>{{ roupas.marca }}</td>
+                    <td>{{ roupas.sessao }}</td>
+                    <td><a href="{% url 'cadastro_roupa_update' roupas.id %}"> Editar </a></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
 {% endblock main %}
