--- a/cadastro/templates/cadastro/lista_sessao.html
+++ b/cadastro/templates/cadastro/lista_sessao.html
@@ -36,7 +36,18 @@
         <li class="nav-item">
             <a class="nav-link" href="#">Locação</a>
         </li>
-    
+        {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#" >Olá, {{ user }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+        {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+        {% endif %}
     </ul>
 {% endblock menu %}
 
@@ -58,14 +69,26 @@
             <button type="submit" class="btn btn-success">Cadastrar</button>
         </form>
     </div>
-    <div class="col-sm-6">
-        <ul> 
-        {% for sessoes in sessao %}
-            <li>
-                <a href="{% url 'cadastro_sessao_update' sessoes.id %}"> {{ sessoes.sessao }} </a>
-            </li>
-        {% endfor %}
-        </ul>
+    <div class="col-6">
+        <h1> Lista das Sessões de Roupas </h1>
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Sessão</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for sessoes in sessao %}
+                <tr>
+                    <th scope="row">{{ sessoes.id }}</th>
+                    <td>{{ sessoes.sessao }}</td>
+                    <td><a href="{% url 'cadastro_sessao_update' sessoes.id %}"> Editar </a></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 <div>
 
