--- a/cadastro/templates/cadastro/update_cliente.html
+++ b/cadastro/templates/cadastro/update_cliente.html
@@ -36,7 +36,18 @@
         <li class="nav-item">
             <a class="nav-link" href="#">Locação</a>
         </li>
-    
+        {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#" >Olá, {{ user }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+        {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+        {% endif %}
     </ul>
 {% endblock menu %}
 
