--- a/cadastro/templates/cadastro/lista_marcaroupas.html
+++ b/cadastro/templates/cadastro/lista_marcaroupas.html
@@ -26,10 +26,11 @@
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Cadastro</a>
             <div class="dropdown-menu">
                 <a class="dropdown-item" href="{% url 'cadastro_lista_clientes'%}">Clientes</a>
-                <a class="dropdown-item" href="#">Aluguel</a>
+                
                 <a class="dropdown-item" href="{% url 'cadastro_lista_funcionarios'%}">Funcionarios</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Separated link</a>
+                <a class="dropdown-item" href="{% url 'financeiro_lista_alugueis' %}">Aluguel</a>
+                <a class="dropdown-item" href="{% url 'financeiro_lista_taxas' %}">Taxas</a>
             </div>
         </li>
 
