--- a/cadastro/templates/cadastro/update_sessao.html
+++ b/cadastro/templates/cadastro/update_sessao.html
@@ -1,6 +1,57 @@
 {% extends 'base.html' %}
 {% load bootstrap %}
 
+{% block menu %}
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'cadastro_home' %}">Home</a>
+        </li>
+
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Roupas</a>
+            <div class="dropdown-menu">
+
+                <a class="dropdown-item" href="{% url 'cadastro_lista_roupas'%}">Roupas</a>
+                <a class="dropdown-item" href="{% url 'cadastro_lista_marcaroupas'%}">Marca da Roupa</a>
+                <a class="dropdown-item" href="{% url 'cadastro_lista_tiporoupas'%}">Tipo de Roupa</a>
+                <a class="dropdown-item" href="{% url 'cadastro_lista_sessao'%}">Sessão da Roupa</a>
+
+                
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Separated link</a>
+            </div>
+        </li>
+
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Cadastro</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="{% url 'cadastro_lista_clientes'%}">Clientes</a>
+                
+                <a class="dropdown-item" href="{% url 'cadastro_lista_funcionarios'%}">Funcionarios</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{% url 'financeiro_lista_alugueis' %}">Aluguel</a>
+                <a class="dropdown-item" href="{% url 'financeiro_lista_taxas' %}">Taxas</a>
+            </div>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="#">Locação</a>
+        </li>
+        {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#" >Olá, {{ user }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+        {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+        {% endif %}
+    </ul>
+{% endblock menu %}
+
 {% block main %}
 
 <div class="row">
