--- a/financeiro/templates/financeiro/lista_aluguel.html
+++ b/financeiro/templates/financeiro/lista_aluguel.html
@@ -1,9 +1,104 @@
-<h2>Lista de Alugueis Realizados</h2>
 
-<ul> 
-    <li>{{ 'Roupa' }} - {{ 'Cliente' }} - {{ 'Valor Total' }}</li><br>
-    {% for alugueis in aluguel %}
-        <li> {{ alugueis.roupa}} - {{alugueis.cliente}} - {{alugueis.total}} </li><hr>
-    {% endfor %}
-</ul>
+{% extends 'base.html' %}
+{% load bootstrap %}
 
+{% block menu %}
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'cadastro_home' %}">Home</a>
+        </li>
+
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Roupas</a>
+            <div class="dropdown-menu">
+
+                <a class="dropdown-item" href="{% url 'cadastro_lista_roupas'%}">Roupas</a>
+                <a class="dropdown-item" href="{% url 'cadastro_lista_marcaroupas'%}">Marca da Roupa</a>
+                <a class="dropdown-item" href="{% url 'cadastro_lista_tiporoupas'%}">Tipo de Roupa</a>
+                <a class="dropdown-item" href="{% url 'cadastro_lista_sessao'%}">Sessão da Roupa</a>
+
+                
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Separated link</a>
+            </div>
+        </li>
+
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Cadastro</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="{% url 'cadastro_lista_clientes'%}">Clientes</a>
+                
+                <a class="dropdown-item" href="{% url 'cadastro_lista_funcionarios'%}">Funcionarios</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{% url 'financeiro_lista_alugueis' %}">Aluguel</a>
+                <a class="dropdown-item" href="{% url 'financeiro_lista_taxas' %}">Taxas</a>
+            </div>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="#">Locação</a>
+        </li>
+        {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#" >Olá, {{ user }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+        {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+        {% endif %}
+    </ul>
+{% endblock menu %}
+
+{% block main %}
+
+<div class="row">
+    <div class="col-5">
+        <h1> Cadastro de Alugueis </h1>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-5">
+        <form action="{% url 'financeiro_aluguel_novo' %}" method="POST">
+            {% csrf_token %}
+    
+            {{ form|bootstrap }}
+    
+            <button type="submit" class="btn btn-success">Cadastrar</button>
+        </form>
+    </div>
+
+    <div class="col-6">
+        <h1> Lista de Alugueis </h1>
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Cliente</th>
+                    <th scope="col">Data de Retirada</th>
+                    <th scope="col">Data de Devolução</th>
+                    <th scope="col">Valor</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for alugueis in aluguel %}
+                <tr>
+                    <th scope="row">{{ alugueis.id }}</th>
+                    <td>{{ alugueis.cliente }}</td>
+                    <td>{{ alugueis.data_retirada }}</td>
+                    <td>{{ alugueis.data_devolucao }}</td>
+                    <td></td>
+                    <td><a href="{% url 'financeiro_aluguel_update' alugueis.id %}"> Editar </a></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+
+{% endblock main %}
