--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -7,13 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 
     <title>Website SisRoupas</title>
 </head>
 <body>
     
-    {% block main %}
-    {% endblock %}
-
+    <div class="container">
+        {% block main %}
+        {% endblock %}
+    </div
 </body>
 </html>
