--- a/website/templates/website/footer.html
+++ b/website/templates/website/footer.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row row-space">
     <div class="col-3">
         <nav class="nav flex-column">
             <a class="nav-link active" href="#">Active</a>
