--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block main %}
-    <div class="row">
+    <div class="row row-space">
         <div class="col-8">
             <h1>Sistema de Alugueis de Roupas</h1>
             <span>Trabalhando para garantir o pão</span>
@@ -15,7 +15,7 @@
     {% include 'website/menu.html' %}
 
     <br><br>
-    <div class="row">
+    <div class="row row-space">
         <div class="col-6">
             Estamos a servir com total indisponibilidade todos os deserviços, sendo assim, somos dotados de prazer
             de servir apenas serviços qualificados, pois repudiamos o irrepudiável, fazendo com que nos tornemos
@@ -27,9 +27,9 @@
             um atendimento de qualidade, o que fez com que surgisse a necessidade desse sistema, estagiários de todos
             os arredores tem decidido não se envolver em tal diálogo, pois opinião desnecessária gera desempregados.
         </div>
-    </div><hr><hr>
+    </div>
 
-    <div class="row">
+    <div class="row row-space">
         <div class="col-4">
             Com um estoque completo e diferente no sentido da palavra, a loga KeroRoupas resolveu inovar e 
             criar um sistema SisRoupas para gerenciar suas roupas de forma efetiva e completa (desculpa ainda
@@ -47,9 +47,9 @@
             além disso temos em nossas lojas roupas infantis e adultas, enfim, para todas as idades, venha para a
             KeroRoupas agora mesmo e curta o melhor da vida.
         </div>
-    </div><hr><hr>
+    </div>
 
-    <div class="row">
+    <div class="row row-space">
         <div class="col-6">
             Estamos a servir com total indisponibilidade todos os deserviços, sendo assim, somos dotados de prazer
             de servir apenas serviços qualificados, pois repudiamos o irrepudiável, fazendo com que nos tornemos
@@ -61,7 +61,7 @@
             um atendimento de qualidade, o que fez com que surgisse a necessidade desse sistema, estagiários de todos
             os arredores tem decidido não se envolver em tal diálogo, pois opinião desnecessária gera desempregados.
         </div>
-    </div><hr>
+    </div>
 
     {% include 'website/footer.html' %}
 
