--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -2,64 +2,54 @@
 {% load static %}
 
 {% block main %}
-    <div class="row row-space">
-        <div class="col-8">
-            <h1>Sistema de Alugueis de Roupas</h1>
-            <span>Trabalhando para garantir o pão</span>
-        </div>
-        <div class="col-4">
-            <img src="{% static 'img/roupas.jpg' %}" alt="SisRoupas">
-        </div>
-    </div>
 
-    {% include 'website/menu.html' %}
 
     <br><br>
     <div class="row row-space">
         <div class="col-6">
-            Estamos a servir com total indisponibilidade todos os deserviços, sendo assim, somos dotados de prazer
+            <p class="p">Estamos a servir com total indisponibilidade todos os deserviços, sendo assim, somos dotados de prazer
             de servir apenas serviços qualificados, pois repudiamos o irrepudiável, fazendo com que nos tornemos
             um diferencial no diferente. Roupas de grif com cara de pirata mas sendo 300% original, se rasgar tem
-            multa.
+            multa.</p>
         </div>
         <div class="col-6">
-            Contando com a ajuda dos mais qualificados atendentes coletados no jovem aprendiz, se faz assim carente
+            <p class="p">Contando com a ajuda dos mais qualificados atendentes coletados no jovem aprendiz, se faz assim carente
             um atendimento de qualidade, o que fez com que surgisse a necessidade desse sistema, estagiários de todos
-            os arredores tem decidido não se envolver em tal diálogo, pois opinião desnecessária gera desempregados.
+            os arredores tem decidido não se envolver em tal diálogo, pois opinião desnecessária gera desempregados.</p>
         </div>
-    </div>
+    </div><hr>
 
     <div class="row row-space">
         <div class="col-4">
-            Com um estoque completo e diferente no sentido da palavra, a loga KeroRoupas resolveu inovar e 
+            <p class="p">Com um estoque completo e diferente no sentido da palavra, a loga KeroRoupas resolveu inovar e 
             criar um sistema SisRoupas para gerenciar suas roupas de forma efetiva e completa (desculpa ainda
-            falta uma parte do sistema)
+            falta uma parte do sistema)</p>
         </div>
         <div class="col-4">
             <figure>
-                <img src="{% static 'img/imagem1.jpg' %}" alt="SisRoupas">
-                <figcaption>Moça não inclusa</figcaption>
+                <img class="img" src="{% static 'img/imagem1.jpg' %}" alt="SisRoupas">
+                <p class="p">Moça não inclusa</p>
             </figure>
             
         </div>
         <div class="col-4">
-            Roupas com texturas exuberantes de florzinhas, ou roupas exoticas com cara de onça temos aqui tbm,
+            <p class="p">Roupas com texturas exuberantes de florzinhas, ou roupas exoticas com cara de onça temos aqui tbm,
             além disso temos em nossas lojas roupas infantis e adultas, enfim, para todas as idades, venha para a
-            KeroRoupas agora mesmo e curta o melhor da vida.
+            KeroRoupas agora mesmo e curta o melhor da vida.</p>
         </div>
     </div>
 
     <div class="row row-space">
         <div class="col-6">
-            Estamos a servir com total indisponibilidade todos os deserviços, sendo assim, somos dotados de prazer
+            <p class="p">Estamos a servir com total indisponibilidade todos os deserviços, sendo assim, somos dotados de prazer
             de servir apenas serviços qualificados, pois repudiamos o irrepudiável, fazendo com que nos tornemos
             um diferencial no diferente. Roupas de grif com cara de pirata mas sendo 300% original, se rasgar tem
-            multa.
+            multa.</p>
         </div>
         <div class="col-6">
-            Contando com a ajuda dos mais qualificados atendentes coletados no jovem aprendiz, se faz assim carente
+            <p class="p">Contando com a ajuda dos mais qualificados atendentes coletados no jovem aprendiz, se faz assim carente
             um atendimento de qualidade, o que fez com que surgisse a necessidade desse sistema, estagiários de todos
-            os arredores tem decidido não se envolver em tal diálogo, pois opinião desnecessária gera desempregados.
+            os arredores tem decidido não se envolver em tal diálogo, pois opinião desnecessária gera desempregados.</p>
         </div>
     </div>
 
