--- a/website/templates/website/menu.html
+++ b/website/templates/website/menu.html
@@ -5,13 +5,13 @@
                 <a class="nav-link active" href="#">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Roupas</a>
+                <a class="nav-link" href="{% url 'website_roupas_details'%}">Roupas</a>
             </li>
             <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre</a>
+                    <a class="nav-link" href="{% url 'website_sobre'%}">Sobre</a>
             </li>
             <li class="nav-item">
-                    <a class="nav-link" href="#">Sistema</a>
+                    <a class="nav-link" href="{% url 'cadastro_home'%}">Sistema</a>
             </li>
         </ul>
     </div>
